--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# Compiled class file
-*.class
+# Project files
+*.iml
+*.idea
+.settings/
+.classpath
+.project
+*-ide-plugin.xml
 
-# Log file
+# Logs
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Build folders
+target/
