--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>2.4.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aragost.javahg/javahg -->
+        <dependency>
+            <groupId>com.aragost.javahg</groupId>
+            <artifactId>javahg</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
